12/27/12 fix default title for MTE challenges
12/27/12 make P3P_Challenge extend MatchChallenge, instead of being a different type of challenge
12/27/12 move duplication in GTL_Challenge and MTE_Challenge into base class MatchChallenge
12/22/12 add support for 6 levels to game reward; PhET logo for level 5, all images for level 6
12/22/12 smite inappropriate uses of constants for axes ranges
12/22/12 started the basic outline of challenge generator for Level 1, see ChallengeFactory1
12/22/12 review and augment internal documentation
12/22/12 verified that basic data-collection works for Game
12/22/12 fix dynamic ranges for GTL challenges
12/22/12 set initial guess for GTL and MTE challenges in a more general way
12/22/12 add slope manipulator for dissimilar line forms
12/22/12 throw exception if an unsupported LineForm or ManipulationMode is encountered
12/22/12 consolidate all game view elements in one package
12/22/12 collapse GTL view hierarchy to 1 primary node and 4 graphs by consulting challenge.lineForm and challenge.manipulationMode
12/22/12 collapse GTL view hierarchy by consulting challenge.lineForm
12/22/12 collapse MTE view hierarchy to 2 nodes by consulting challenge.lineForm and challenge.manipulationMode
12/22/12 collapse MTE view hierarchy by consulting challenge.lineForm
12/22/12 move duplicate code into MTE_ChallengeNode base class
12/22/12 use PointSlopeLineNode throughout MTE challenges, because we don't show the equation on graphed lines
12/22/12 use PointSlopeLineNode throughout GTL challenges, because we don't show the equation on graphed lines
12/22/12 simplify GTL_GraphNode interface, don't need separate methods for creating answer and guess line nodes
12/22/12 fix RewardNode.setLevel so that we have a perfect-score reward for all levels
12/22/12 consolidate all game-model elements in one package
12/22/12 flatten MTE_Challenge hierarchy to one class (model for "Make the Equation" challenges)