@@ -38,8 +38,7 @@ class GTL_SlopeIntercept_GraphNode extends GTL_GraphNode {
         final PNode guessNodeParent = new PComposite();
 
         // the correct answer, initially hidden
-        answerNode = createLineNode( challenge.answer, challenge.graph, challenge.mvt );
-        answerNode.setEquationVisible( false );
+        answerNode = new LineNode( challenge.answer, challenge.graph, challenge.mvt );
         answerNode.setVisible( false );
 
         // dynamic ranges
@@ -87,9 +86,7 @@ class GTL_SlopeIntercept_GraphNode extends GTL_GraphNode {
 
                 // draw the line
                 guessNodeParent.removeAllChildren();
-                LineNode guessNode = createLineNode( line, challenge.graph, challenge.mvt );
-                guessNode.setEquationVisible( false );
-                guessNodeParent.addChild( guessNode );
+                guessNodeParent.addChild( new LineNode( line, challenge.graph, challenge.mvt ) );
 
                 // move the manipulators
                 slopeManipulatorNode.setOffset( challenge.mvt.modelToView( line.x2, line.y2 ) );
